STM32MP153A DTS files have been updated.

--- a/fdts/stm32mp153a-plc-pinctrl.dtsi
+++ b/fdts/stm32mp153a-plc-pinctrl.dtsi
@@ -143,7 +143,7 @@
 
 		pins2 {
 			pinmux = <STM32_PINMUX('D', 6, AF7)>; /* USART2_RX */
-			bias-disable;
+			bias-pull-up;
 		};
 	};
 
@@ -157,7 +157,7 @@
 
 		pins2 {
 			pinmux = <STM32_PINMUX('D', 9, AF7)>; /* USART3_RX */
-			bias-disable;
+			bias-pull-up;
 		};
 	};
 };
