--- a/fdts/stm32mp153a-plc.dts
+++ b/fdts/stm32mp153a-plc.dts
@@ -175,13 +175,13 @@
 		CLK_CKPER_HSE
 		CLK_FMC_PLL4P
 		CLK_QSPI_PLL4P
-		CLK_ETH_PLL4P
+		CLK_ETH_PLL3Q
 		CLK_SDMMC12_PLL4P
 		CLK_DSI_DSIPLL
 		CLK_STGEN_HSE
 		CLK_USBPHY_HSE
-		CLK_SPI2S1_PLL3Q
-		CLK_SPI2S23_PLL3Q
+		CLK_SPI2S1_PLL4P
+		CLK_SPI2S23_PLL4P
 		CLK_SPI45_HSI
 		CLK_SPI6_HSI
 		CLK_I2C46_HSI
@@ -217,11 +217,11 @@
 		frac = <0x1400>;
 	};
 
-	/* VCO = 416 MHz => P = 208, Q = 104, R = 11 */
+	/* VCO = 400 MHz => P = 200, Q = 50, R = 11 */
 	pll3: st,pll@2 {
 		compatible = "st,stm32mp1-pll";
 		reg = <2>;
-		cfg = <2 51 1 3 36 PQR(1,1,1)>;
+		cfg = <2 49 1 7 35 PQR(1,1,1)>;
 	};
 
 	/* VCO = 600 MHz => P = 100, Q = 75, R = 24 */
